--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,22 @@
 [package]
 name = "vuoto_cli"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
+base64 = "0.22.1"
+clap = { version = "4.5.37", features = ["derive"] }
+console = "0.15.11"
+dialoguer = "0.11.0"
+directories = "6.0.0"
+hmac = "0.12.1"
+indicatif = "0.17.11"
+keyring = { version = "3", features = [
+  "apple-native",
+  "windows-native",
+  "sync-secret-service",
+] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+sha2 = "0.10.9"
