--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -20,3 +20,6 @@ keyring = { version = "3", features = [
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sha2 = "0.10.9"
+
+[dev-dependencies]
+tempfile = "3.19.1"
