--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.0.1"
 edition = "2024"
 
 [dependencies]
+base64 = "0.22.1"
 env_home = "0.1.0"
 inquire = "0.7.5"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.142"
 turbocache = "0.0.5"
 
 [dev-dependencies]
